test/tests/stages/15_arrays_and_pointer_arithmetic/valid/declarators/big_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  extern
  int
  identifier(x)
  [
  const long(4294967297L)
  ]
  [
  const int(100000000)
  ]
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
