test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_array_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  [
  [
  const int(10)
  ]
  ]
  ;
  return
  const int(0)
  ;
  }
